--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <span class="text-primary">Lee</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        서울시 송파구 · (010) 4604-XXXX ·
+                        <a href="mailto:name@email.com">hatedbs99@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">코로나가 만연한 사회, 멀티캠퍼스에서 태어난 천재 개발자.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
